# sv

./: .gitattributes  .gitignore  .sv.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PRODUCT_SPECIFICATION.md  PROMPT.md  README.md  USER_FEEDBACK.md  USER_TODO.md  build.rs  install.sh
.beads/: issues.jsonl  last-touched
.tasks/: tasks.jsonl  tasks.snapshot.json
.tickets/: sv-2pg.1.md  sv-2pg.10.md  sv-2pg.11.md  sv-2pg.2.md  sv-2pg.3.md  sv-2pg.4.md  sv-2pg.5.md  sv-2pg.6.md  sv-2pg.7.md  sv-2pg.8.md  sv-2pg.9.md  sv-2pg.md  sv-42u.md  sv-70r.md  sv-844.md  sv-8jf.1.1.md  sv-8jf.1.10.md  sv-8jf.1.11.md  sv-8jf.1.12.md  sv-8jf.1.13.md  sv-8jf.1.14.md  sv-8jf.1.2.md  sv-8jf.1.3.md  sv-8jf.1.4.md  sv-8jf.1.5.md  sv-8jf.1.6.md  sv-8jf.1.7.md  sv-8jf.1.8.md  sv-8jf.1.9.md  sv-8jf.1.md  sv-8jf.2.1.md  sv-8jf.2.2.md  sv-8jf.2.3.md  sv-8jf.2.4.md  sv-8jf.2.5.md  sv-8jf.2.6.md  sv-8jf.2.7.md  sv-8jf.2.md  sv-8jf.3.1.md  sv-8jf.3.10.md  (+70 more)
Formula/: sv.rb
agent_docs/: README.md  events.md  gotchas.md  repo_map.md
docs/: README.md  architecture.md  events.md  gotchas.md  prd-task-log-replay-hardening.md  prd-task-start-exclusivity.md  prd-tasks.md  repo_map.md  task_viewer.md  task_viewer_tests.md  testing.md
src/: actor.rs  change_id.rs  config.rs  conflict.rs  error.rs  events.rs  git.rs  hoist.rs  lease.rs  lib.rs  lock.rs  main.rs  merge.rs  oplog.rs  output.rs  project.rs  protect.rs  refs.rs  repo_stats.rs  risk.rs  selector.rs  storage.rs  task.rs  undo.rs  workspace.rs
tests/: actor_commands.rs  cli_smoke.rs  commit_oplog.rs  commit_protect.rs  config.rs  (+32 more)
(+45 files in other folders)
